--- a/public/nj.html
+++ b/public/nj.html
@@ -32,7 +32,7 @@
                             class="fa fa-home"></span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">SUBMIT A TESTING SITE <span class="fa fa-map-marker"></span> </a>
+                    <a class="nav-link" href="submissions">SUBMIT A TESTING SITE <span class="fa fa-map-marker"></span> </a>
                 </li>
             </ul>
             <ul class="nav navbar-nav ml-auto login">
