--- a/public/submissions.html
+++ b/public/submissions.html
@@ -66,59 +66,56 @@
                 <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
             </div>
 
-            <div class="form-group">
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="inputCity">City</label>
-                        <input type="text" class="form-control" id="inputCity">
-                    </div>
-                    <div class="form-group col-md-4">
-                        <label for="inputState">State</label>
-                        <select id="inputState" class="form-control">
-                          <option selected>Choose...</option>
-                          <option>New Jersey</option>
-                          <option>New York</option>
-                          <option>Pennsylvania</option>
+            <div>
+                <label for="inputState">State</label>
+                <br/>
+                <select id="source" name="source">
+                            <option>New Jersey</option>
+                            <option>New York</option>
+                            <option>Pennsylvania</option>
+                       </select>
+                <br/>
+                <label for="inputCity">City</label>
+                <br/>
+                <select id="status" name="status">
+                    <option></option>
+                                   
                         </select>
+
+            </div>
+
+            <div class="form-group">
+                <label for="inputAddress">Hours of Operation</label>
+                <div class="form-group row">
+                    <div class="col-5">
+                        <input class="form-control" type="time" value="13:45:00" id="example-time-input">
                     </div>
-                    <div class="form-group col-md-2">
-                        <label for="inputZip">Zip</label>
-                        <input type="text" class="form-control" id="inputZip">
+                    <p>to</p>
+                    <div class="col-6">
+                        <input class="form-control" type="time" value="13:45:00" id="example-time-input">
                     </div>
                 </div>
 
-                <div class="form-group">
-                    <label for="inputAddress">Hours of Operation</label>
-                    <div class="form-group row">
-                        <div class="col-5">
-                            <input class="form-control" type="time" value="13:45:00" id="example-time-input">
-                        </div>
-                        <p>to</p>
-                        <div class="col-6">
-                            <input class="form-control" type="time" value="13:45:00" id="example-time-input">
-                        </div>
-                    </div>
 
 
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                    <label class="form-check-label" for="inlineCheckbox1">Walk-in</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                    <label class="form-check-label" for="inlineCheckbox2">Drive-thru</label>
+                </div>
+                <br/>
 
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                        <label class="form-check-label" for="inlineCheckbox1">Walk-in</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                        <label class="form-check-label" for="inlineCheckbox2">Drive-thru</label>
-                    </div>
-                    <br/>
-                    <button type="submit" class="btn submit">Submit</button>
+
+                <button type="submit" class="btn submit">Submit</button>
         </form>
-
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="//geodata.solutions/includes/statecity.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script type="text/javascript" src="js/submissions.js"></script>
-
 </body>
 
 </html>
